# tagseq2tagseq

./: .gitignore  .gitmodules  CLAUDE.md  GENERATION_FEATURE_SPEC.md  GENERATION_IMPLEMENTATION_PLAN.md  GENERATION_TECHNICAL_SPEC.md  GENERATION_WORK_BREAKDOWN.md  INSTRUCTIONS.md  README.md  block_mask_creator.py  cross_doc_mask.py  dataset.py  demo_traversal.py  generate.py  launch_slurm.py  main.py  mem_probe.py  pretokenize.py  profile_training.py  pyproject.toml  python_import_detector.py  smoke_test_generation.py  test_cross_doc_mask.py  tunalab.yaml
benchmarks/: attention_harness.py  bench_backbone.py  bench_flex_vs_vslf.py  bench_layer.py  bench_training_module.py
configs/: baseline.yaml  large_32k.yaml  stack_100m_32k.yaml  stack_100m_32k_baseline.yaml
data/: collate.py  dataset.py  dataset_config.py  document_sources.py  layout.py  pack_sampler.py  packed_dataset.py  pretokenize.py  pretokenize_stack.py  traversal.py
data/extractors/: README.md  __init__.py  cli.py  (+5 more)
kernels/: __init__.py  causal_attn.py  cross_doc_bitmask_attn.py  cross_doc_bitmask_bim_v1.py  cross_doc_naive_attn.py  varlen_attn.py
model/: __init__.py  document_context.py  document_corpus.py  generation_config.py  generation_loop.py  generation_result.py  identifier_utils.py  model.py  sampling.py  title_formats.py  title_utils.py  tokenizer_config.py
plans/: file_extension_abstraction.md  generation.md  language_agnostic_imports.md  latex_support.md  title_pipeline.md  tokenizer_abstraction.md
tests/: conftest.py  test_dataset.py  test_pretokenize.py  test_python_import_detector.py
(+75 files in other folders)
